After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 153527 - Series 1 - 80000 causes crash
Series 1 - 80000 causes crash
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
git master
Other All
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-09-23 10:36 UTC by Colin Stephen
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Colin Stephen 2004-09-23 10:36:28 UTC
Select cell A1
Edit->Fill->Series...
Enter start 1, step 1, end 80000
Gnumeric crashes, but sometimes Gnome catches it on the way out and
offers to restart/submit bug. "Inform developer" doesn't know how to submit a bug,
but that could be a Debian integration problem.

Doesn't seem to occur if you have the whole sheet selected.

This was the first thing I tried, incidentally, as I was curious to see if
gnumeric had the same 64k row limit as Excel.
Comment 1 Morten Welinder 2004-09-23 15:49:31 UTC
It doesn't actually crash anymore --> lowering severity.
Two issues:

1. It prints loads of
** (gnumeric:19935): CRITICAL **: sheet_col_get: assertion `pos <
SHEET_MAX_COLS' failed

2. It fills horizontally which wasn't what you expected.  (You should probably
   just select the entire A column by clicking on the header.)
Comment 2 Andreas J. Guelzow 2004-10-20 05:44:49 UTC
Re: 2   Selecting the entire A column will not help. In that case only the first
cell would be filled. You need to select `series in column". By default it is
`series in row'.
Comment 3 Andreas J. Guelzow 2004-10-20 05:57:17 UTC
#1 is fixed in cvs head.