http://bugzilla.gnome.org/show_bug.cgi?id=153527 don't expand the dao

2004-10-20  Andreas J. Guelzow <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=153527
	* dao.c (dao_adjust): don't expand the dao beyond SHEET_MAX_ROWS
	  or SHEET_MAX_COLS.

2004-10-20  Andreas J. Guelzow <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=154139
	* dialog-stf-format-page.c (cb_col_check_clicked): switch column
	  style
	(format_page_update_preview): adjust column style